--- a/source/_posts/2021-01-18-adb.markdown
+++ b/source/_posts/2021-01-18-adb.markdown
@@ -204,14 +204,27 @@ APP_ABI:= armeabi-v7a
 persistentDataPath: storage/Android/data/yourpackageName/files
 temporaryCachePath: storage/Android/data/yourpackageName/cache
 
+使用原生的方式获取路径：
+
+
+```java
+MLog.d(TAG, "output: " + output);
+MLog.d(TAG, "package: " + gameContext.getPackageResourcePath());
+MLog.d(TAG, "cache: " + gameContext.getCacheDir().getPath());
+MLog.d(TAG, "exCache: " + gameContext.getExternalCacheDir().getPath());
+MLog.d(TAG, "file: " + gameContext.getFilesDir().getPath());
+MLog.d(TAG, "code: " + gameContext.getPackageCodePath());
+```
+
+对应的输出是：
+
+![](/img/post-android/jar7.jpg)
 
 
 ## 参考
 
 * [android工程目录结构][i1]
 * [Android获取文件夹路径 /data/data/][i2]
-* [现代图形 API 的内存管理][i3]
 
 [i1]: https://blog.csdn.net/zy394383693/article/details/40627467
 [i2]: https://www.cnblogs.com/daishuguang/p/3854472.html
-[i3]: https://zhuanlan.zhihu.com/p/87595524 
