--- a/source/_posts/2020-10-04-face.markdown
+++ b/source/_posts/2020-10-04-face.markdown
@@ -69,7 +69,7 @@ __PCA 处理流程：__
 
 (1) 第一步计算矩阵 X 的样本的协方差矩阵 S（此为不标准PCA，标准PCA计算相关系数矩阵C）:
 (2) 第二步计算协方差矩阵S（或C）的特征向量 e1,e2,…,eN和特征值 , t = 1,2,…,N ；
-(3)第三步投影数据到特征向量张成的空间之中。利用公式$ newBV_{i,p} = \sum^{n}_{k=1} {e_i BV_{i,k}}$ ，其中BV值是原样本中对应维度的值。
+(3)第三步投影数据到特征向量张成的空间之中。利用公式$newBV_{i,p} = \sum^{n}_{k=1} {e_i BV_{i,k}}$，其中BV值是原样本中对应维度的值。
 
 ![](/img/post-ml/bf4.jpg)
 
@@ -109,7 +109,7 @@ def PCA(datamat, top):
 
 给定一张RGB图片$I$，作者使用R-Net回归参数向量$\chi$，根据得到的人脸模型可以渲染得到新的图片$I'$，训练时不需要任何真实标签，而是根据$I'$来计算损失。
 
-#### Image-Level Losses
+### Image-Level Losses
 
 
 __1. Robust Photometric Loss__
@@ -199,7 +199,6 @@ $$
 $$
 
 其中$\odot$和$\oslash$分别表示哈达玛积和商(Hadamard product and division)。
-
 
 
 ### Confidence-Net Structure
