--- a/source/_posts/2021-03-27-shader.markdown
+++ b/source/_posts/2021-03-27-shader.markdown
@@ -28,13 +28,111 @@ Unity的shader资源不仅含有GPU上执行的着色器代码，还包含了渲
 
 有了这些编译开关标记，我们就可以只写很少的shader代码，从而依附在这份骨架代码上，来实现含有细微差异功能的变种shader代码。当然功能越多，这些变体数量也成指数级增长，如何控制这些变体可能产生的数量，也需要较为丰富的经验和技巧。
 
-#### 三个原则：
 
-　1.如果shader没有与使用它的材质打在一个AB中,那么shader_feature的所有宏相关的代码都不会被包含进AB包中(有一种例外,就是当shader_feature _A这种形式的时候是可以的),这个shader最终被程序从AB包中拿出来使用也会是错误的(粉红色).
+### multi_compile与shader_feature
 
-　　2.把shader和使用它的材质放到一个AB包中,但是材质中没有保存任何的keyword信息(你再编辑器中也是这种情况),shader_feature会默认的把第一个keyword也就是上面的_A和_C(即每个shader_feature的第一个)作为你的选择。而不会把_A _D,_B _C,_B _D这三种组合的代码编译到AB包中。
+multi_compile与shader_feature可在shader中定义宏。两者区别如下图所示：
 
-　　3.把shader和使用它的材质放到一个AB包中,并且材质保存了keyword信息(_A _C)为例,那么这个AB包就只包含_A _C的shaderVariant.
+|  | multi_compile | shader_feature |
+| - | :-: | :-: |
+| 定义方式 | #pragma multi_compile A| #pragma shader_feature A |
+| 宏的适用范围 | 所有Shader | 所有Shader |
+|变体的生成 | 生成所有的变体 | 可自定义生成何种变体 |
+|默认定义的宏 | 默认定义首个宏 | 默认定义首个宏（只有一个宏定义时默认为nokeyword） |
+
+
+##### 1.	定义方式
+
+定义方式中值得注意的是，#pragma shader_feature A其实是 #pragma shader_feature _ A的简写，下划线表示未定义宏(nokeyword)。因此此时shader其实对应了两个变体，一个是nokeyword，一个是定义了宏A的。
+
+而#pragma multi_compile A并不存在简写这一说，所以shader此时只对应A这个变体。若要表示未定义任何变体，则应写为 #pragma multi_compile __ A。
+##### 2.	宏的适用范围
+
+两种定义方式可以使用在任何shader中，只是各自有一些建议使用情况。
+
+multi_compile定义的宏，如#pragma multi_compile_fog，#pragma multi_compile_fwdbase等，基本上适用于大部分shader，与shader自身所带的属性无关。
+
+shader_feature定义的宏多用于针对shader自身的属性。比如shader中有_NormalMap这个属性(Property)，便可通过```#pragma shader_feature _NormalMap```来定义宏，用来实现这个shader在material有无_NormalMap时可进行不同的处理。
+
+##### 3.	变体的生成
+
+multi_compile会默认生成所有的变体，因此应当谨慎适用multi_compile，否则将会导致变体数量激增。如：
+```c
+#pragma multi_compile A B C
+#pragma multi_compile D E
+```
+
+则此时会生成 A D、A E、B D、B E、C D、C E这6中变体。
+
+shader_feature要生成何种变体可用shader variant collection进行自定义设置。
+
+##### 4.	默认定义的宏
+
+当material中的keywords无法对应shader所生成的变体时，Unity便会默认定义宏定义语句中的首个宏，并运行相应的变体来为这个material进行渲染。
+
+multi_compile与shader_feature都默认定义首个宏，如下表所示:
+
+|  宏定义语句 | 默认定义的宏 |
+|  :-: | :-: |
+| #pragma shader_feature A | nokeyword(存在简写问题)|
+| #pragma shader_feature A B C | A |
+|#pragma multi_compile A | A |
+|#pragma multi_compile A B C | A |
+
+
+
+
+<BR>
+##### 项目中shader变体的生成方式主要有三种，其优缺点如下图所示：
+
+| 生成方式 | 优点 | 缺点 |
+| - | :-: | :-: |
+| shader与material打在一个包中 | 变体根据material中的keywords自动生成| 1.	多个不同的material包中可能存在相同的shader变体，造成资源冗余.<br/>2.若在程序运行时动态改变material的keyword，使用shader_feature定义的宏，其变体可能并没有被生成 |
+| Shader单独打包，使用multi_compile定义全部宏 | 全部变体都被生成，不会发生需要的变体未生成的情况 | 1.生成的变体数量庞大，严重浪费资源 |
+|Shader单独打包，shader_feature（需要使用ShaderVariantCollection生成变体）与multi_compile（还是会生成所有变体）结合使用 | 能够有效控制shader_feature变体数量 | 1.如何确定哪些变体需要生成<br/>2.容易遗漏需要生成的变体，特别是需要动态替换的变体 |
+
+
+#### Shader中有多个Pass时变体的生成规则
+
+a.读取ShaderVariantCollection中已存在的变体，获取它们的Keywords。
+
+b.	将这些Keywords分别与每个Pass的多组Keywords列表求交集，取交集中Keywords数量最多得那组。
+
+c.	用得到的Keywords与对应的PassType生成ShaderVariant，并添加到ShaderVariantCollection中。
+
+d.	若得到得交集中有新的Keywords，则回到b。
+
+
+上述过程类似递归。例如：
+Shader 中有 ForwardBase、ForwardAdd、Normal 三种PassType(以下为了方便简称Base、Add、 Normal)。定义的宏如下：
+
+|  Base | Add |Normal|
+|  :-: | :-: | :-: |
+| #pragma shader_feature A<br/> #pragma shader_feature B<br/>#pragma shader_feature C | #pragma shader_feature A<br/>#pragma shader_feature E|#pragma shader_feature A<br/>#pragma shader_feature B<br/>#pragma shader_feature E  |
+
+
+&emsp;&emsp;此时若ShaderVariantCollection中包含的变体是 Base ABC，Add AE。则此时生成的变体为：这三种PassType的默认定义的宏(nokeyword)所对应的变体(3个)以及原先直接包含的Base ABC、Add AE。除此之外Unity还会额外生成Add A、Base A、Normal A、Normal AB、 Base AB、Normal AE这6个变体。
+
+    ABC ∩ Add AE -> Add A (A is NewKeyword)
+      A ∩ Base ABC -> Base A
+      A ∩ Normal ABE -> Normal A
+    ABC ∩ Normal ABE -> Normal AB (AB is NewKeyword)
+      AB ∩ Base ABC -> Base AB
+    AE ∩ Normal ABE -> Normal AE
+
+#### 变体的调用规则
+
+&emsp;&emsp;当collection将变体准确生成后，便能在运行时通过修改material中的keywords来实现对不同变体的调用。
+
+&emsp;&emsp;假设某collection生成的变体只有Forward ABC，Forward ABE，Forward nokeyword这三种，则此时调用关系如下：
+
+|  Material中的Keywords | 调用的变体 | 解释|
+|  :-: | :-: | :-: |
+| A B C | Forward A B C|正常匹配|
+| A B | Forward nokeyword |没有匹配的变体，调用首个被定义的宏 所对应的变体|
+|A B C D  | Forward A B C  |调用交集中keyword数量多的变体<br/> ABCD ∩ ABC = ABC<br/> ABCD ∩ ABE = AB|
+|A B C E | Forward A B C |交集中keyword数量相同，在collection中谁在前就调用谁|
+|A B E C | Forward A B C |与在material中的定义顺序无关|
 
 
 ### 着色器变种的筛选
@@ -193,6 +291,16 @@ Profiler.EndSample();
 此次我们看到 无论 shader_feature 对应的 variant 是否对应在 svc中， 则表现都正确。坏处就是所有的资源都关联在一个 bundle 中了。
 
 ![](/img/post-unity/var3.jpg)
+
+
+
+##### 三个原则：
+
+　1.如果shader没有与使用它的材质打在一个AB中,那么shader_feature的所有宏相关的代码都不会被包含进AB包中(有一种例外,就是当shader_feature _A这种形式的时候是可以的),这个shader最终被程序从AB包中拿出来使用也会是错误的(粉红色).
+
+　　2.把shader和使用它的材质放到一个AB包中,但是材质中没有保存任何的keyword信息(你再编辑器中也是这种情况),shader_feature会默认的把第一个keyword也就是上面的_A和_C(即每个shader_feature的第一个)作为你的选择。而不会把_A _D,_B _C,_B _D这三种组合的代码编译到AB包中。
+
+　　3.把shader和使用它的材质放到一个AB包中,并且材质保存了keyword信息(_A _C)为例,那么这个AB包就只包含_A _C的shaderVariant.
 
 
 ### 关于Shader.Find
