--- a/source/_posts/2021-05-04-maven.markdown
+++ b/source/_posts/2021-05-04-maven.markdown
@@ -23,31 +23,22 @@ tags:
 maven-release-aar.gradle 就是用来设置打包的脚本，在文件中添加如下代码
 
 ```groovy
-//1.maven-插件
 apply plugin: 'maven'
 
-//2.maven-信息
-ext {
-    PUBLISH_GROUP_ID = 'com'
-    PUBLISH_ARTIFACT_ID = 'math3d'
-    PUBLISH_VERSION = '1.0.5'
-}
-
-//3.maven-输出路径
 uploadArchives {
     repositories.mavenDeployer {
         repository(url: uri('/tmp/maven-release'))
 
         pom.project {
-            groupId project.PUBLISH_GROUP_ID
-            artifactId project.PUBLISH_ARTIFACT_ID
-            version project.PUBLISH_VERSION
-            packaging 'aar'
+            groupId 'com'
+            artifactId 'math3d'
+            version '1.0.5'
         }
     }
 }
 
-//以下代码会生成 jar 包源文件，如果是不开源码，请不要输入这段, aar内包含注释
+//以下代码会生成 jar 包源文件，如果是不开源码，请不要输入这段
+//aar 包内包含注释
 task androidSourcesJar(type: Jar) {
     from android.sourceSets.main.java.sourceFiles
 }
@@ -62,20 +53,14 @@ artifacts {
 
 ```groovy
 apply plugin: 'maven-publish'
-ext {
-    PUBLISH_GROUP_ID = 'com'
-    PUBLISH_ARTIFACT_ID = 'math3d'
-    PUBLISH_VERSION = '1.0.5'
-}
 
 uploadArchives {
     repositories.mavenDeployer {
         repository(url: uri('/tmp/maven-release'))
         pom.project {
-            groupId project.PUBLISH_GROUP_ID
-            artifactId project.PUBLISH_ARTIFACT_ID
-            version project.PUBLISH_VERSION
-            packaging 'aar'
+            groupId 'com'
+            artifactId 'math3d'
+            version '1.0.5'
         }
     }
 }
