--- a/source/_posts/2021-05-04-maven.markdown
+++ b/source/_posts/2021-05-04-maven.markdown
@@ -125,10 +125,64 @@ compile ('com.google.http-client:google-http-client-jackson:1.15.0-rc')
 
 完整路径是：C:\Users\用户名\.gradle\caches\modules-2\files-2.1\com.google.http-client\google-http-client-jackson\1.15.0-rc\哈希值\jar或aar文件
 
+
+### 五. 配置 Maven Web环境
+
+安装 Maven 之前要求先确定JDK 已经安装配置完成。Maven是 Apache 下的一个项目，目前新版本是 3.0.4。
+
+1.首先去官网下载 Maven：http://www.apache.org/dyn/closer.cgi/maven/binaries/apache-maven-3.0.4-bin.tar.gz
+
+2.配置 maven 环境变量：
+
+系统变量：MAVEN_HOME = D:\Development\apache-maven-3.0.4
+
+系统变量：path = %MAVEN_HOME%\bin
+
+mac 系统可以配置在用户目录的.bash_profile 文件中
+
+```sh
+export M2_HOME=~/Documents/software/apache-maven-3.8.1
+export PATH=$M2_HOME/bin:$PATH
+```
+
+配置好之后， source ~/.bash_profile 使环境变量生效。
+
+相信大家都有配过环境变量的，详细步骤就不说了，对着把属性名和属性值配上的OK了。
+
+打开 cmd或者 Terminal(MacOS)，在里面敲：mvn -version
+
+
+![](/img/post-android/mav6.jpg)
+
+
+mvn 是 maven 的一个指令，mvn -version 是查看版本信息，我的操作系统是 32位的 WIN7，安装的 maven 是 3.8.1
+
+如果能打印如上信息，说明到此 Maven3 已经在你的电脑上安装完成。
+
+
+#### 修改 maven 本地仓库存放位置
+
+找到 apache-maven-3.0.4下的 conf 下的 settings.xml 配置文件，我的是在 D:\Development\apache-maven-3.0.4\conf\settings.xml
+
+![](/img/post-android/mav7.jpg)
+
+
+#### maven 使用案例
+
+1.创建简单的maven 的web项目
+    mvn archetype:create 
+    举例：mvn archetype:create  -DgroupId=com.demo.app -DartifactId=demo-app  -DarchetypeArtifactId=maven-archetype-webapp
+
+2.生成和清除Eclipse项目结构：
+   mvn eclipse:eclipse 将maven项目变成eclipse,其实是在项目中生成 .project 和 .classpath 两个文件
+   mvn eclipse:clean 清理（删除target目录下编译内容）
+   mvn clean 打包发布
+
+
 ### 附录
 
 
-gradlew常用命令
+#### 1.gradlew常用命令
 
 ```sh
 ./gradlew clean  clean项目
@@ -145,4 +199,22 @@ gradlew常用命令
 ./gradlew makeJar //生成 jar
 需要说明的是这些命令可以叠加使用，例如：
 ./gradlew clean build --info > bugtags.log
+```
+
+#### 2.maven常用命令：
+
+```sh
+mvn clean       清空产生的项目( target里)
+mvn compile     编译源代码
+mvn install     在本地repository中安装jar（包含mvn compile，mvn package，然后上传到本地仓库）
+mvn deploy      上传到私服(包含mvn install,然后，上传到私服)
+mvn package     打包
+mvn test        运行测试
+mvn site        产生site
+mvn test-compile   编译测试代码
+mvn -Dtest package  只打包不测试
+mvn  jar:jar    只打jar包
+mvn  test -skipping compile -skipping test-compile  只测试而不编译，也不测试编译
+mvn  deploy   
+mvn  source.jar   源码打包
 ```
